Backport plugin version 1.0.2 to game/server version 1.20.4.